--- a/portfolio.html
+++ b/portfolio.html
@@ -367,6 +367,28 @@
             </li>
           </ul>
         </div>
+        <div class="container-footer">
+          <h2 class="footer-title">Підпишіться на розсилку</h2>
+          <div class="footer-form-group">
+            <form class="footer-form">
+              <label class="footer-form-label">
+                <input
+                  class="footer-form-input"
+                  type="email"
+                  placeholder="E-mail"
+                  name="user-email"
+                />
+              </label>
+
+              <button class="footer-form-button" type="submit">
+                Підписатися
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./image/icons.svg#send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
